# OpenGLSceneBuilder

./: .gitignore  CMakeLists.txt
examples/: jsonSceneTest.cpp  lighting.cpp  lighting2.cpp  main.cpp  multiLighting.cpp  other.cpp  randomCubes.cpp  shadowMultiLighting.cpp  test_encaps_glapp.cpp  test_glm.cpp  test_shader_handler.cpp
include/: ApplicationParams.h  Camera.h  GLApplication.h  Illumination.h  RenderableObject.h  Scene.h  ShaderHandler.h  TextureImage.h  Vertex.h  VertexGenerators.h  VertexHandler.h
include/GLFW/: glfw3.h
include/glad/: glad.h
include/stb/: stb_image.h
scenes/: testScene.json
shaders/: Lighting.frag  LightingMap.frag  MultiLightingMap.frag  PointShadowMapping.geom  ShadowMultiLightingMap.frag  ShadowTextureLightingMap.vert  TextureLighting.vert  TextureLightingMap.vert  Triangle.frag  Triangle.vertex.cc  TrianglePos.vert  TrianglePos.vertex.cc
src/: Camera.cpp  GLApplication.cpp  RenderableObject.cpp  Scene.cpp  ShaderHandler.cpp  TextureImage.cpp  VertexHandler.cpp  glad.cc
